# Node-Weft-Example

./: .gitmodules  CMakeLists.txt  Node-Weft-Example.sln  Node-Weft-Example.vcxproj  Node-Weft-Example.vcxproj.filters  README.md
Example1/: CMakeLists.txt  Node-Weft-Example.vcxproj  Node-Weft-Example.vcxproj.filters
Example1/resource/: setting.config
Example1/resource/Examples/: dispersion.nwproj  refraction.nwproj
Example1/src/: Main.cpp  OpticsNode.cpp  OpticsNode.h  RayOptics.cpp  RayOptics.h
